--- a/serie.html
+++ b/serie.html
@@ -4,14 +4,11 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Watch Series</title>
-
-<!-- Plyr CSS -->
 <link rel="stylesheet" href="https://cdn.plyr.io/3.7.8/plyr.css" />
-
 <style>
 body { margin:0; font-family:Arial,sans-serif; background:#000; color:#fff; }
 .container { max-width:1200px; margin:0 auto; padding:12px; }
-.player-area { width:100%; position:relative; padding-top:56.25%; } /* 16:9 aspect */
+.player-area { width:100%; position:relative; padding-top:56.25%; }
 #player { position:absolute; top:0; left:0; width:100%; height:100%; }
 
 /* Buttons */
@@ -68,18 +65,13 @@ button.nav { background:#1db954; color:#fff; }
 
 </div>
 
-<!-- Plyr JS -->
 <script src="https://cdn.plyr.io/3.7.8/plyr.polyfilled.js"></script>
-
-<!-- Firebase -->
 <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
 <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-database-compat.js"></script>
-
-<!-- Series Data -->
 <script src="series-data.js"></script>
 
 <script>
-// ==== Firebase Config ====
+// Firebase
 const firebaseConfig = {
   apiKey: "YOUR_API_KEY",
   authDomain: "YOUR_AUTH_DOMAIN",
@@ -92,117 +84,100 @@ const firebaseConfig = {
 firebase.initializeApp(firebaseConfig);
 const db = firebase.database();
 
-// ==== Plyr Initialization ====
-const player = new Plyr('#player', {
-  autoplay:true,
-  controls:['play','progress','current-time','mute','volume','fullscreen'],
-  fullscreen:{enabled:true, fallback:true}
-});
+// Plyr
+const player = new Plyr('#player',{autoplay:true,controls:['play','progress','current-time','mute','volume','fullscreen']});
 
-// ==== Series Setup ====
+// Series
 const params = new URLSearchParams(location.search);
 const seriesId = params.get("id");
-const serie = SERIES.find(s => s.id === seriesId);
+const serie = SERIES.find(s=>s.id===seriesId);
 if(!serie) location.replace("series.html");
 
 seriesTitle.textContent = serie.title;
 seriesMeta.textContent = `${serie.genre} • ${serie.country} • ${serie.year}`;
-seriesSynopsis.textContent = serie.synopsis || "";
+seriesSynopsis.textContent = serie.synopsis||"";
 
 // Episodes
-const episodesContainer = document.getElementById('episodes');
-let currentEpisode = 0;
+const episodesContainer=document.getElementById('episodes');
+let currentEpisode=0;
 serie.episodes.forEach((ep,index)=>{
-  const btn = document.createElement("button");
-  btn.textContent = ep.title;
-  btn.onclick = ()=>{ loadEpisode(index,true); scrollToPlayer(); };
+  const btn=document.createElement("button");
+  btn.textContent=ep.title;
+  btn.onclick=()=>{ loadEpisode(index,true); scrollToPlayer(); };
   episodesContainer.appendChild(btn);
 });
 
 // Scroll
 function scrollToPlayer(){ document.querySelector('.player-area').scrollIntoView({behavior:'smooth',block:'start'}); }
 
-// ==== Video URL Normalizer ====
+// Normalize URLs
 function normalizeVideo(url){
-  url = url.trim();
-
+  url=url.trim();
   // YouTube
-  if(url.includes("youtube.com") || url.includes("youtu.be")){
+  if(url.includes("youtube.com")||url.includes("youtu.be")){
     let id="";
     try{
-      if(url.includes("youtu.be")) id = url.split("youtu.be/")[1].split(/[?&]/)[0];
-      else if(url.includes("/shorts/")) id = url.split("/shorts/")[1].split(/[?&]/)[0];
-      else if(url.includes("/embed/")) id = url.split("/embed/")[1].split(/[?&]/)[0];
-      else id = new URL(url).searchParams.get("v");
+      if(url.includes("youtu.be")) id=url.split("youtu.be/")[1].split(/[?&]/)[0];
+      else if(url.includes("/shorts/")) id=url.split("/shorts/")[1].split(/[?&]/)[0];
+      else if(url.includes("/embed/")) id=url.split("/embed/")[1].split(/[?&]/)[0];
+      else id=new URL(url).searchParams.get("v");
     } catch(e){}
-    if(id) return {type:'youtube', source:id};
+    if(id) return {type:'youtube',source:id};
   }
-
   // Vimeo
   if(url.includes("vimeo.com")){
-    const id = url.split("/").filter(Boolean).pop();
-    if(id) return {type:'vimeo', source:id};
+    const id=url.split("/").filter(Boolean).pop();
+    return {type:'vimeo',source:id};
   }
-
   // Google Drive
   if(url.includes("drive.google.com")){
-    const match = url.match(/\/d\/([a-zA-Z0-9_-]+)/);
-    if(match && match[1]){
-      return {type:'mp4', source:`https://drive.google.com/uc?export=media&id=${match[1]}`};
-    }
+    const match=url.match(/\/d\/([a-zA-Z0-9_-]+)/);
+    if(match&&match[1]) return {type:'mp4',source:`https://drive.google.com/uc?export=media&id=${match[1]}`};
   }
-
-  // Default
-  return {type:'mp4', source:url};
+  return {type:'mp4',source:url};
 }
 
-// ==== Load Episode ====
-const storageKey = `resume_${seriesId}`;
-
+// Load episode
+const storageKey=`resume_${seriesId}`;
 function loadEpisode(index,userAction=false){
-  const ep = serie.episodes[index];
+  const ep=serie.episodes[index];
   currentEpisode=index;
-
-  const v = normalizeVideo(ep.video);
+  const v=normalizeVideo(ep.video);
   let source;
   if(v.type==='youtube') source={type:'youtube',sources:[{src:v.source,provider:'youtube'}]};
   else if(v.type==='vimeo') source={type:'vimeo',sources:[{src:v.source,provider:'vimeo'}]};
   else source={type:'video',sources:[{src:v.source,type:'video/mp4'}]};
+  player.source=source;
 
-  player.source = source;
-
-  const saved = JSON.parse(localStorage.getItem(storageKey))||{};
-  if(saved.episode===index && saved.time) player.currentTime = saved.time;
+  const saved=JSON.parse(localStorage.getItem(storageKey))||{};
+  if(saved.episode===index&&saved.time) player.currentTime=saved.time;
 
   if(userAction && userHasActivePIN()) player.fullscreen.enter();
   player.play();
 
-  localStorage.setItem(storageKey, JSON.stringify({episode:index,time:player.currentTime}));
+  localStorage.setItem(storageKey,JSON.stringify({episode:index,time:player.currentTime}));
 }
 
-// ==== Auto-resume ====
-const saved = JSON.parse(localStorage.getItem(storageKey));
-if(saved && serie.episodes[saved.episode] !== undefined){
-  loadEpisode(saved.episode);
-} else {
-  loadEpisode(0);
-}
+// Auto-resume
+const saved=JSON.parse(localStorage.getItem(storageKey));
+if(saved&&serie.episodes[saved.episode]!==undefined) loadEpisode(saved.episode);
+else loadEpisode(0);
 
-// ==== Save Time ====
+// Save time
 player.on('timeupdate',()=>{
-  const current = JSON.parse(localStorage.getItem(storageKey))||{};
-  current.episode = currentEpisode;
-  current.time = player.currentTime;
-  localStorage.setItem(storageKey, JSON.stringify(current));
+  const current=JSON.parse(localStorage.getItem(storageKey))||{};
+  current.episode=currentEpisode;
+  current.time=player.currentTime;
+  localStorage.setItem(storageKey,JSON.stringify(current));
 });
 
-// ==== Auto-next ====
-player.on('ended',()=>{ const next=currentEpisode+1; if(serie.episodes[next]) loadEpisode(next); });
+// Auto-next
+player.on('ended',()=>{ const next=currentEpisode+1;if(serie.episodes[next]) loadEpisode(next); });
 
-// ==== Controls ====
+// Controls
 watchNowBtn.onclick=()=>{ loadEpisode(saved?.episode||0,true); scrollToPlayer(); };
-nextEpisodeBtn.onclick=()=>{ const next=currentEpisode+1; if(serie.episodes[next]) loadEpisode(next,true); scrollToPlayer(); };
-prevEpisodeBtn.onclick=()=>{ const prev=currentEpisode-1; if(serie.episodes[prev]) loadEpisode(prev,true); scrollToPlayer(); };
+nextEpisodeBtn.onclick=()=>{ const next=currentEpisode+1;if(serie.episodes[next]) loadEpisode(next,true); scrollToPlayer(); };
+prevEpisodeBtn.onclick=()=>{ const prev=currentEpisode-1;if(serie.episodes[prev]) loadEpisode(prev,true); scrollToPlayer(); };
 let episodesVisible=true;
 toggleEpisodesBtn.onclick=()=>{ episodesVisible=!episodesVisible; episodesContainer.style.display=episodesVisible?'block':'none'; };
 shareBtn.onclick=()=>{
@@ -210,10 +185,10 @@ shareBtn.onclick=()=>{
   window.open(`https://api.whatsapp.com/send?text=${text}`,'_blank');
 };
 
-// ==== Dummy Auth ====
+// Dummy PIN
 function userHasActivePIN(){ return window.ACTIVE_PIN===true; }
 
-// ==== Comments ====
+// Comments
 const usernameInput=document.getElementById("usernameInput");
 const commentInput=document.getElementById("commentInput");
 const commentBtnEl=document.getElementById("commentBtn");
@@ -231,17 +206,17 @@ commentBtnEl.onclick=function(){
   commentInput.value="";
 };
 
-commentsRef.limitToLast(100).on("value",function(snap){
+commentsRef.limitToLast(100).on("value",snap=>{
   commentsList.innerHTML="";
   var arr=[];
-  snap.forEach(function(c){ arr.push({data:c.val(),ref:c.ref}); });
-  arr.sort(function(a,b){ return b.data.timestamp-a.data.timestamp; });
-  arr.forEach(function(c){
-    var div=document.createElement("div");
+  snap.forEach(c=>{ arr.push({data:c.val(),ref:c.ref}); });
+  arr.sort((a,b)=>b.data.timestamp-b.data.timestamp);
+  arr.forEach(c=>{
+    const div=document.createElement("div");
     div.className="comment"; div.style.position="relative";
     div.innerHTML=`<strong>${c.data.user}</strong>: ${c.data.text} <span style="float:right; color:#888; font-size:12px;">${new Date(c.data.timestamp).toLocaleString()}</span>`;
     if(localStorage.getItem("activePIN")==="Orion196"){
-      var b=document.createElement("button");
+      const b=document.createElement("button");
       b.textContent="🗑"; b.style.position="absolute"; b.style.right="6px"; b.style.top="6px";
       b.style.background="#e50914"; b.style.color="#fff"; b.style.border="none"; b.style.borderRadius="3px"; b.style.padding="2px 6px"; b.style.cursor="pointer";
       b.onclick=function(){ c.ref.remove(); };
